--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
 <header class="header">
   <div class="container">
     <div class="logo">
-      <a href="index.html">
+      <a href="/index.html">
         <img src={logo} alt="CALI Reads" />
       </a>
     </div>
