heading style change

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -16,7 +16,9 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
 
                 <p><strong>Why:</strong> AR Guides support comprehension of complex text and use of textual evidence. They have been proven to be an effective tool with middle school students across content areas and when used in classroom, intervention, and special education settings (Duffelmeyer 1994; Kozen, Murray, and Windell 2006).</p>
             </div>
-            <h3 class='section-title'>Training Webinar</h3>
+            <div class='section-title'>
+            <h3 >Training Webinar</h3>
+        </div>
         
             <div class='section-desc'>     
             <p>Dr. Deborah Reed demonstrates how to use Anticipation Reaction Guides (AR Guides) to support adolescent reading comprehension across content areas. Learn how to use these advanced graphic organizers to activate student background knowledge, support their comprehension of complex texts, and build their use of text evidence to support opinions.</p>
