added module launch link

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -15,6 +15,10 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
                 <p><strong>What:</strong> Anticipation Reaction Guides (AR Guides) are advanced organizers that are used before, during, and after reading. The teacher creates a set of opinion statements to activate student background knowledge before they read, to identify textual evidence related to the statements while they are reading, and to reconsider their opinions in the light of textual evidence after reading.</p>
 
                 <p><strong>Why:</strong> AR Guides support comprehension of complex text and use of textual evidence. They have been proven to be an effective tool with middle school students across content areas and when used in classroom, intervention, and special education settings (Duffelmeyer 1994; Kozen, Murray, and Windell 2006).</p>
+
+                <div class='module-launch'>
+                    <a href='/modules#ARGuides' class='btn'>Anticipation Reaction Guides Literacy Module >></a>
+                </div>
             </div>
             <div class='section-title'>
             <h3 >Training Webinar</h3>
