style addded to launch btn

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -108,4 +108,9 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
       .outcomes{
         margin-bottom: 1em;
       }
+
+      .module-launch .btn{
+        background-color: var(--color-secondary);
+}
+      
     </style>
