edits to module launch btn

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -112,5 +112,9 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
       .module-launch .btn{
         background-color: var(--color-secondary);
 }
+    .module-launch .btn:hover{
+        background-color: #AED235;
+        color:#333;
+    }
       
     </style>
