resized small here on front page

--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -1,6 +1,6 @@
 ---
 import hero from '../images/front-page.png';
-import heroSmall from '../images/front-pageSmall.png';
+import heroSmall from '../images/front-pageSmaller.png';
 
 export interface Props {
 heading?: string;
