edits to large front page hero

--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -1,5 +1,5 @@
 ---
-import hero from '../images/front-page.png';
+import hero from '../images/front-page960.png';
 import heroSmall from '../images/front-pageSmaller.png';
 
 export interface Props {
