edits to webinar size

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -109,6 +109,20 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
         margin-bottom: 1em;
       }
 
+      .webinar{
+        position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;    
+  }
+
+      .webinar iframe{
+        position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+      }
+
       .module-launch .btn{
         background-color: var(--color-secondary);
 }
