--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -158,6 +158,17 @@ h2 {
   display: flex;
   flex-direction: column;
  align-items: center;
+
+ position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;    
+}
+.webinar iframe{
+  position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
 }
 
 .module-launch{
