Edits to handout size

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -54,7 +54,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
                 <h3>Anticipation Reaction Template</h3>
             </div>
             <div class='section-desc'>
-               <div class='handout'> <a href='https://www.calireads.org/wp-content/uploads/2021/05/AR-Guide-Template.pdf'><img src={ARGuideTemplate} width="800px" ></a></div>
+               <div class='handout'> <a href='https://www.calireads.org/wp-content/uploads/2021/05/AR-Guide-Template.pdf'><img src={ARGuideTemplate} class='handout' width="800px" ></a></div>
             </div>
 
             <div class='section-title'>
@@ -109,9 +109,6 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
         margin-bottom: 1em;
       }
 
-      .webinar{
-        
-  }
 
       
 
