--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -152,10 +152,10 @@ h2 {
   display: flex;
   flex-direction: column;
  align-items: center;
+ width: 100%;
 }
 
 .handout img{
-  width: 500px;
   object-fit: fill;
 }
 
