added alt tags to AGR images

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -36,7 +36,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
                     </ul>
                 </div>
             <div class='webinar'>
-                <iframe src="https://player.vimeo.com/video/461923212?h=9d2a0f690e" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>
+                <iframe name='ARGWebinar' src="https://player.vimeo.com/video/461923212?h=9d2a0f690e"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>
                 </iframe>
             </div>
             <ul class="arg-lists">
@@ -54,7 +54,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
                 <h3>Anticipation Reaction Template</h3>
             </div>
             <div class='section-desc'>
-               <div class='handout'> <a href='https://www.calireads.org/wp-content/uploads/2021/05/AR-Guide-Template.pdf'><img src={ARGuideTemplate} class='handout' width="800px" ></a></div>
+               <div class='handout'> <a href='https://www.calireads.org/wp-content/uploads/2021/05/AR-Guide-Template.pdf'><img src={ARGuideTemplate} class='handout' alt='ARG Template' title='ARG Template'></a></div>
             </div>
 
             <div class='section-title'>
@@ -62,7 +62,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
             </div>
             <div class='section-desc'>
             <div class='handout'>
-                <a href='https://www.calireads.org/bridge-content/ARGuides/AR_Guides_Course_Resources/digiCoach%20walkthrough%20Look%20Fors.pdf'><img src={digiCoachWalkthrough} class='handout' width="800"></a>
+                <a href='https://www.calireads.org/bridge-content/ARGuides/AR_Guides_Course_Resources/digiCoach%20walkthrough%20Look%20Fors.pdf'><img src={digiCoachWalkthrough} class='handout' alt='DigiCoach Walkthrough' title='DigiCoach Walkthrough'></a>
             </div>
             <p>Use the Anticipation Reaction Guide Walkthrough Tool during classroom walkthroughs to: </p>
                 <ul class='arg-lists'>
@@ -112,12 +112,5 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
 
       
 
-      .module-launch .btn{
-        background-color: var(--color-secondary);
-}
-    .module-launch .btn:hover{
-        background-color: #AED235;
-        color:#333;
-    }
       
     </style>
