added iframe title

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -36,7 +36,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
                     </ul>
                 </div>
             <div class='webinar'>
-                <iframe name='ARGWebinar' src="https://player.vimeo.com/video/461923212?h=9d2a0f690e"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>
+                <iframe title='ARGWebinar' src="https://player.vimeo.com/video/461923212?h=9d2a0f690e"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen>
                 </iframe>
             </div>
             <ul class="arg-lists">
