--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,23 @@
         <img src={logo} alt="CALI Reads" />
       </a>
     </div>
-    <nav>
+    <!--Nav Bar Responsive -->
+    <nav class="navbar">
+      <div class="menu-toggle">
+        <div class="hamburger">
+        </div>
+      </div>
+     
+      <ul class="nav-list">
+        <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://calireads.org/wordbuilder/" target="_blank">Wordbuilder Intervention</a></li>
+        <li class="nav-item"><a class="nav-link" href="/modules">E-Learning Modules</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadswebinars" target="_blank">Webinars</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadsdemonstration" target="_blank">Demonstration Videos</a></li>
+      </ul>
+    </nav>
+<!-- Old Nav -->
+   <!--  <nav class='header-nav'>
       <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="https://calireads.org/wordbuilder/" target="_blank">Wordbuilder Intervention</a></li>
@@ -20,7 +36,7 @@
         <li><a href="https://vimeo.com/showcase/calireadswebinars" target="_blank">Webinars</a></li>
         <li><a href="https://vimeo.com/showcase/calireadsdemonstration" target="_blank">Demonstration Videos</a></li>
       </ul>
-    </nav>
+    </nav> -->
   </div>
 </header>
 
@@ -44,16 +60,114 @@
   height: 35px;
   vertical-align: middle;
 }
+.navbar {
 
-.header nav ul {
   display: flex;
+  justify-content: space-between;
+}
+.navbar-brand {
+  color: #000;
+  text-transform: uppercase;
+}
+.nav-list {
+  list-style: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 40%;
+  height: 50vh;
+  background-color: #ccc;
+  opacity: .9;
+  padding-left:1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  z-index: 1250;
+  text-transform: uppercase;
+  transform: translateX(-100%);
+  transition: transform 0.5s;
+  font-size: .8em;
+}
+.nav-link:hover {
+  border-bottom: 3px solid var(--color-secondary);
+}
+.active {
+  font-weight: 700;
+  border-bottom: 3px solid var(--color-secondary);
+}
+.open .nav-list {
+  transform: translateX(0);
+}
+.menu-toggle {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 3.2rem;
+  height: 3.2rem;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+}
+.hamburger {
+  width: 2.4rem;
+  height: 3px;
+  background-color: var(--color-secondary);
+  border-radius: 2px;
+  border: none;
+  transition: all 0.7s ease-out;
+}
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  position: absolute;
+  width: 2.4rem;
+  height: 3px;
+  background-color: var(--color-secondary);
+  border: none;
+}
+.hamburger::before {
+  transform: translateY(-8px);
+}
+.hamburger::after {
+  transform: translateY(8px);
+}
+.open .hamburger {
+  background: #000;
+}
+.open .hamburger::before {
+  transform-origin: (0, 0);
+  transform: rotate(45deg);
+}
+.open .hamburger::after {
+  transform-origin: (0, 0);
+  transform: rotate(-45deg);
 }
 
-.header nav ul li {
-  padding: 0 10px;
-}
-
-.header nav ul li a {
-  color: #084E75;
+@media screen and (min-width: 900px) {
+  .nav-list {
+    position: initial;
+    width: initial;
+    height: initial;
+    background-color: #fff;
+    padding: 0;
+    justify-content: initial;
+    flex-direction: row;
+    transform: initial;
+  }
+  .nav-link {
+    margin-left: 1rem;
+    transition: all 0.5s;
+  }
+  .menu-toggle {
+    display: none;
+  }
 }
 </style>
+
+
+<script>const navbar = document.querySelector(".navbar");
+  const menuToggle = document.querySelector(".menu-toggle");
+  menuToggle.addEventListener("click", () => {
+    navbar.classList.toggle("open");
+  });</script>
