--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,7 @@
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    background: #f8fafc;
+    /*background: #f8fafc;*/
     color: #084E75;
   }
   
