edits to old nav

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadsdemonstration" target="_blank">Demonstration Videos</a></li>
       </ul>
     </nav>
-<!-- Old Nav -->
+<!-- Old Nav removed-->
    <!--  <nav class='header-nav'>
       <ul>
         <li><a href="/index.html">Home</a></li>
