--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -2,9 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 
 import Showcase from '../components/Showcase.astro';
-
 import ARGuideTemplate from '../images/AR_Guide_Template-980x729.png';
-import ARGuidePDF from '../pdfs/AR-Guide-Template.pdf';
+import ARGuidePDF from '/public/pdfs/AR-Guide-Template.pdf';
 import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
 ---
 <Layout title="Anticipation Reaction Guide">
@@ -18,7 +17,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
                 <p><strong>Why:</strong> AR Guides support comprehension of complex text and use of textual evidence. They have been proven to be an effective tool with middle school students across content areas and when used in classroom, intervention, and special education settings (Duffelmeyer 1994; Kozen, Murray, and Windell 2006).</p>
 
                 <div class='module-launch'>
-                    <a href='/modules#ARGuides' class='btn'>Anticipation Reaction Guides Literacy Module >></a>
+                    <a href='/modules#ARGuides' class='btn'>Anticipation Reaction Guides Literacy Module</a>
                 </div>
             </div>
             <div class='section-title'>
