added img width to ARG images

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -54,7 +54,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
                 <h3>Anticipation Reaction Template</h3>
             </div>
             <div class='section-desc'>
-               <div class='handout'> <a href={ARGuidePDF}><img src={ARGuideTemplate} class='handout' alt='ARG Template' title='ARG Template'></a></div>
+               <div class='handout'> <a href={ARGuidePDF}><img src={ARGuideTemplate} class='handout' alt='ARG Template' title='ARG Template' width='100%;'></a></div>
             </div>
 
             <div class='section-title'>
@@ -62,7 +62,7 @@ import digiCoachWalkthrough from '../images/digi-Walkthrough.png';
             </div>
             <div class='section-desc'>
             <div class='handout'>
-                <a href='https://www.calireads.org/bridge-content/ARGuides/AR_Guides_Course_Resources/digiCoach%20walkthrough%20Look%20Fors.pdf'><img src={digiCoachWalkthrough} class='handout' alt='DigiCoach Walkthrough' title='DigiCoach Walkthrough'></a>
+                <a href='https://www.calireads.org/bridge-content/ARGuides/AR_Guides_Course_Resources/digiCoach%20walkthrough%20Look%20Fors.pdf'><img src={digiCoachWalkthrough} class='handout' alt='DigiCoach Walkthrough' title='DigiCoach Walkthrough' width='100%;'></a>
             </div>
             <p>Use the Anticipation Reaction Guide Walkthrough Tool during classroom walkthroughs to: </p>
                 <ul class='arg-lists'>
