added width and height dimensions to the logo and fron page images

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="logo">
       <a href="/index.html">
-        <img src={logo} alt="CALI Reads" />
+        <img src={logo} width="400px" height="55px" alt="CALI Reads" />
       </a>
     </div>
     <!--Nav Bar Responsive -->
