--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -26,8 +26,8 @@ showExtra = true } = Astro.props as Props;
     {showExtra && <> 
     
     <div class="showcase-img">
-      <img class="logos" src={hero} alt="Helping Middle School Improve Student Outcomes" />
-    <img class="logos-small" src={heroSmall} alt="Helping Middle School Improve Student Outcomes" />
+      <img class="logos" src={hero} width="1100px" height="478px" alt="Helping Middle School Improve Student Outcomes" />
+    <img class="logos-small" src={heroSmall} width="500px" height="217px" alt="Helping Middle School Improve Student Outcomes" />
     </div>
 
     <p class="showcase-demo">
