added SGQ page and new nav item

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,6 +21,7 @@
      
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href='/index.html#features'>Literacy Strategies</a></li>
         <li class="nav-item"><a class="nav-link" href="https://calireads.org/wordbuilder/" target="_blank">Wordbuilder Intervention</a></li>
         <li class="nav-item"><a class="nav-link" href="/modules">E-Learning Modules</a></li>
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadswebinars" target="_blank">Webinars</a></li>
@@ -157,8 +158,9 @@
 </style>
 
 
-<script>const navbar = document.querySelector(".navbar");
+<script>
+  const navbar = document.querySelector(".navbar");
   const menuToggle = document.querySelector(".menu-toggle");
   menuToggle.addEventListener("click", () => {
-    navbar.classList.toggle("open");
+  navbar.classList.toggle("open");
   });</script>
