--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -28,7 +28,7 @@ import pdf from '../images/pdf.png';
                     <h3>Purpose of Level One Questions</h3>
                 </summary>
                 <div class='webinar'>
-                <p><iframe id='sgqVid1' src="https://player.vimeo.com/video/312770749?h=4c2a96ad12?enablejsapi=1" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></p>
+                <p><iframe id='sgqVid1' title='Purpose of Level One Questions' src="https://player.vimeo.com/video/312770749?h=4c2a96ad12?enablejsapi=1" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></p>
                     <p><a href="https://vimeo.com/312770749">Self-Generated Questions | Purpose of Level One Questions | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
                 </div>
               </details>
@@ -38,7 +38,7 @@ import pdf from '../images/pdf.png';
                   <h3>Level Two Questions Small Group</h3>
                 </summary>
                 <div class='webinar'>
-                    <iframe id='sgqVid2' src="https://player.vimeo.com/video/312784541?h=d592bbc651" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                    <iframe id='sgqVid2' title='Level Two Questions Small Group' src="https://player.vimeo.com/video/312784541?h=d592bbc651" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                     
                     <p><a href="https://vimeo.com/312784541">Self-Generated Questions | Level Two Questions - Small Group Instruction | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
                 </div>
@@ -49,7 +49,7 @@ import pdf from '../images/pdf.png';
                     <h3>Introducing Level Three Questions </h3></summary>
 
                     <div class='webinar'>
-                        <iframe id='sgqVid3' src="https://player.vimeo.com/video/312785865?h=4ac48b5bcd" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                        <iframe id='sgqVid3' title='Level Two Questions Small Group' src="https://player.vimeo.com/video/312785865?h=4ac48b5bcd" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                         <p><a href="https://vimeo.com/312785865">Self-Generated Questions | Introducing Level Three Questions | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
                     </div>
               </details>
@@ -59,7 +59,7 @@ import pdf from '../images/pdf.png';
                     <h3>Level Three Modeling </h3>
                 </summary>
                 <div class='webinar'>
-                    <iframe id="sgqVid4" src="https://player.vimeo.com/video/312791822?h=afebd3670a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                    <iframe id="sgqVid4" title='Level Three Modeling' src="https://player.vimeo.com/video/312791822?h=afebd3670a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                     <p><a href="https://vimeo.com/312791822">Self-Generated Questions | Modeling Level Three Questions | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
                 </div>
@@ -70,7 +70,7 @@ import pdf from '../images/pdf.png';
                     <h3>Cloze Reading & Building Academic Vocabulary</h3>
                 </summary>
                <div class='webinar'>
-                    <iframe id="sgqVid5" src="https://player.vimeo.com/video/312793797?h=aab2ee965a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                    <iframe id="sgqVid5" title='Cloze Reading & Building Academic Vocabulary' src="https://player.vimeo.com/video/312793797?h=aab2ee965a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 <p><a href="https://vimeo.com/312793797">Self-Generated Questions | Cloze Reading and Building Academic Vocabulary | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
                </div>
              </details>
@@ -81,14 +81,14 @@ import pdf from '../images/pdf.png';
                 <ul class='resource-stack'>
                     
                     <li><a href='https://www.calireads.org/pdfs/Self-Generated-Questions-digiCOACH-Edition.pdf'>
-                        <img src={pdf}>
+                        <img src={pdf} alt='SGQ Walkthrough Tool'>
                         <div>digiCOACH SGQ walkthrough tool</div></a>
                     </li>
                     
                         <li>
                             <a href='https://www.calireads.org/bridge-content/SGQ-Planning-Sheet.pdf' target='_blank'>
                             
-                            <img src={pdf}>
+                            <img src={pdf} alt='SGQ Teacher Planning Sheet'>
                             
                             <div>Teacher Planning Sheet</div>
                         </a>
@@ -103,7 +103,7 @@ import pdf from '../images/pdf.png';
                     
                     <li>
                         <a href='https://www.calireads.org/bridge-content/Student-Log-for-SGQ.pdf'>
-                        <img src={pdf} alt='PDF Document'>
+                        <img src={pdf} alt='Student Question Log'>
                         <div>Student Question Log</div>
                         </a>
                     </li>
