added image size

--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -81,14 +81,14 @@ import pdf from '../images/pdf.png';
                 <ul class='resource-stack'>
                     
                     <li><a href='https://www.calireads.org/pdfs/Self-Generated-Questions-digiCOACH-Edition.pdf'>
-                        <img src={pdf} alt='SGQ Walkthrough Tool'>
+                        <img src={pdf} alt='SGQ Walkthrough Tool' width='128' height='128'>
                         <div>digiCOACH SGQ walkthrough tool</div></a>
                     </li>
                     
                         <li>
                             <a href='https://www.calireads.org/bridge-content/SGQ-Planning-Sheet.pdf' target='_blank'>
                             
-                            <img src={pdf} alt='SGQ Teacher Planning Sheet'>
+                            <img src={pdf} alt='SGQ Teacher Planning Sheet' width='128' height='128'>
                             
                             <div>Teacher Planning Sheet</div>
                         </a>
@@ -96,14 +96,14 @@ import pdf from '../images/pdf.png';
                     
                        
                         <li><a href="https://www.calireads.org/bridge-content/SGQ_Cue_Cards.pdf">
-                            <img src={pdf} alt='PDF Document' title='PDF Document'>
+                            <img src={pdf} alt='PDF Document' title='PDF Document' width='128' height='128'>
                             <div>Student Cue Cards</div>
                 </li>
                                     
                     
                     <li>
                         <a href='https://www.calireads.org/bridge-content/Student-Log-for-SGQ.pdf'>
-                        <img src={pdf} alt='Student Question Log'>
+                        <img src={pdf} alt='Student Question Log' width='128' height='128'>
                         <div>Student Question Log</div>
                         </a>
                     </li>
