--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,9 +11,9 @@ import cdeImg from '../images/CDE_green-border.png';
     <div class="container">
       
       <div class='footer-images'>
-        <div class="item"><img src={napaImg} alt='Napa County Office of Education'></div>
-        <div class="item"><img src={osepImg} alt='U.S. Office of Special Education Programs'></div>
-        <div class="item"><img src={cdeImg} alt='California Department of Education'></div>
+        <div class="item"><img src={napaImg} alt='Napa County Office of Education' width='317' height='144'></div>
+        <div class="item"><img src={osepImg} alt='U.S. Office of Special Education Programs' width='310' height='144'></div>
+        <div class="item"><img src={cdeImg} alt='California Department of Education' width='312' height='140'></div>
 
       </div>
      
