--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -80,13 +80,13 @@ import pdf from '../images/pdf.png';
             <div class='section-desc'>
                 <ul class='resource-stack'>
                     
-                    <li><a href='https://www.calireads.org/pdfs/Self-Generated-Questions-digiCOACH-Edition.pdf'>
+                    <li><a href='https://www.calireads.org/pdfs/Self-Generated-Questions-digiCOACH-Edition.pdf' aria-label='digiCOACH SGQ walkthrough tool'>
                         <img src={pdf} alt='SGQ Walkthrough Tool' width='128' height='128'>
                         <div>digiCOACH SGQ walkthrough tool</div></a>
                     </li>
                     
                         <li>
-                            <a href='https://www.calireads.org/bridge-content/SGQ-Planning-Sheet.pdf' target='_blank'>
+                            <a href='https://www.calireads.org/bridge-content/SGQ-Planning-Sheet.pdf' aria-label='SGQ Teacher Planning Sheet' target='_blank'>
                             
                             <img src={pdf} alt='SGQ Teacher Planning Sheet' width='128' height='128'>
                             
@@ -95,14 +95,14 @@ import pdf from '../images/pdf.png';
                     </li>
                     
                        
-                        <li><a href="https://www.calireads.org/bridge-content/SGQ_Cue_Cards.pdf">
-                            <img src={pdf} alt='PDF Document' title='PDF Document' width='128' height='128'>
+                        <li><a href="https://www.calireads.org/bridge-content/SGQ_Cue_Cards.pdf" aria-label='Student Cue Cards'>
+                            <img src={pdf} alt='PDF Document' title='Student Cue Cards' width='128' height='128'>
                             <div>Student Cue Cards</div>
                 </li>
                                     
                     
                     <li>
-                        <a href='https://www.calireads.org/bridge-content/Student-Log-for-SGQ.pdf'>
+                        <a href='https://www.calireads.org/bridge-content/Student-Log-for-SGQ.pdf' aria-label='Student Question Log'>
                         <img src={pdf} alt='Student Question Log' width='128' height='128'>
                         <div>Student Question Log</div>
                         </a>
@@ -119,7 +119,7 @@ import pdf from '../images/pdf.png';
             </div>
             <div class='section-desc'>
                 <p>Use the Self-Generated Questions (SGQ) Walkthrough Tool to identify key instructional components. The tool defines 12 Instructional Look Fors classified by three categories: Lesson Design, Tools & Resources, and SGQ strategy components. The SGQ Walkthrough Tool can be used to guide SGQ lesson planning or as a tool when conducting a SGQ lesson Walkthrough. This tool is available in paper form by downloading the pdf or digitally through the digiCOACH app – free to CALI Reads participants.</p>
-                <img class='handout' src={sgqWalkthroughimg} alt="SGQ Walkthrough Tool" title="SGQ Walkthrough Tool">
+                <img class='handout' src={sgqWalkthroughimg} alt="SGQ Walkthrough Tool" title="SGQ Walkthrough Tool" width='400' height='500'>
 
 
             </div>
