edits to improve Google Lighthouse score

--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -33,7 +33,7 @@ import pdf from '../images/pdf.png';
                 </div>
               </details>
 
-              <details open>
+              <details >
                 <summary>
                   <h3>Level Two Questions Small Group</h3>
                 </summary>
@@ -44,7 +44,7 @@ import pdf from '../images/pdf.png';
                 </div>
               </details>
 
-              <details open>
+              <details >
                 <summary>
                     <h3>Introducing Level Three Questions </h3></summary>
 
@@ -54,7 +54,7 @@ import pdf from '../images/pdf.png';
                     </div>
               </details>
 
-             <details open>
+             <details >
                 <summary>
                     <h3>Level Three Modeling </h3>
                 </summary>
@@ -65,7 +65,7 @@ import pdf from '../images/pdf.png';
                 </div>
              </details>
 
-             <details open>
+             <details >
                 <summary>
                     <h3>Cloze Reading & Building Academic Vocabulary</h3>
                 </summary>
@@ -79,47 +79,28 @@ import pdf from '../images/pdf.png';
             </div>
             <div class='section-desc'>
                 <ul class='resource-stack'>
-                    
-                    <li><a href='https://www.calireads.org/pdfs/Self-Generated-Questions-digiCOACH-Edition.pdf' aria-label='digiCOACH SGQ walkthrough tool'>
-                        <img src={pdf} alt='SGQ Walkthrough Tool' width='128' height='128'>
-                        <div>digiCOACH SGQ walkthrough tool</div></a>
+                    <li><a href='https://www.calireads.org/pdfs/Self-Generated-Questions-digiCOACH-Edition.pdf' title='digiCOACH SGQ walkthrough tool' target='_blank'>digiCOACH SGQ walkthrough tool</a>
                     </li>
                     
                         <li>
-                            <a href='https://www.calireads.org/bridge-content/SGQ-Planning-Sheet.pdf' aria-label='SGQ Teacher Planning Sheet' target='_blank'>
-                            
-                            <img src={pdf} alt='SGQ Teacher Planning Sheet' width='128' height='128'>
-                            
-                            <div>Teacher Planning Sheet</div>
-                        </a>
+                            <a href='https://www.calireads.org/bridge-content/SGQ-Planning-Sheet.pdf'  title='Teacher Planning Sheet' target='_blank'> Teacher Planning Sheet</a>
                     </li>
                     
+                        <li><a href="https://www.calireads.org/bridge-content/SGQ_Cue_Cards.pdf" title='Student Cue Cards' target="_blank">Student Cue Cards</a></li>
                        
-                        <li><a href="https://www.calireads.org/bridge-content/SGQ_Cue_Cards.pdf" aria-label='Student Cue Cards'>
-                            <img src={pdf} alt='PDF Document' title='Student Cue Cards' width='128' height='128'>
-                            <div>Student Cue Cards</div>
-                </li>
-                                    
-                    
                     <li>
-                        <a href='https://www.calireads.org/bridge-content/Student-Log-for-SGQ.pdf' aria-label='Student Question Log'>
-                        <img src={pdf} alt='Student Question Log' width='128' height='128'>
-                        <div>Student Question Log</div>
-                        </a>
+                        <a href='https://www.calireads.org/bridge-content/Student-Log-for-SGQ.pdf' title='Student Question Log' target="_blank">Student Question Log </a>
                     </li>
-
-                    
-                    
                 </ul>
-                
-        </div>
+         </div>
 
             <div class='section-title'>
                 <h2>Self-Generated Questions Walkthrough Tool</h2>
             </div>
             <div class='section-desc'>
                 <p>Use the Self-Generated Questions (SGQ) Walkthrough Tool to identify key instructional components. The tool defines 12 Instructional Look Fors classified by three categories: Lesson Design, Tools & Resources, and SGQ strategy components. The SGQ Walkthrough Tool can be used to guide SGQ lesson planning or as a tool when conducting a SGQ lesson Walkthrough. This tool is available in paper form by downloading the pdf or digitally through the digiCOACH app – free to CALI Reads participants.</p>
-                <img class='handout' src={sgqWalkthroughimg} alt="SGQ Walkthrough Tool" title="SGQ Walkthrough Tool" width='800' height='618'>
+                <a href='https://www.calireads.org/pdfs/Self-Generated-Questions-digiCOACH-Edition.pdf' target="_blank" aria-label='SGQ Walkthrough Tool'>
+                    <img class='handout' src={sgqWalkthroughimg} alt="SGQ Walkthrough Tool" title="SGQ Walkthrough Tool" ></a>
 
 
             </div>
