--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
- import logo from '../images/calireads-small.png';
+ import logo from '../images/calireads-smaller.png';
 
 ---
 
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="logo">
       <a href="/index.html">
-        <img src={logo} width='200' height='20' alt="CALI Reads" />
+        <img src={logo} alt="CALI Reads" />
       </a>
     </div>
     <!--Nav Bar Responsive -->
