added new resources

--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -108,10 +108,10 @@ import pdf from '../images/pdf.png';
                 <h3>Other Related Resources</h3>
             </div>
             <div class='section-desc'>
-            <ul>
-                <li>IRIS Center</li>
-                <li>Middle School Matters</li>
-                <li>Meadows Center</li>
+            <ul class='resource-stack'>
+                <li><a href='https://iris.peabody.vanderbilt.edu/module/sec-rdng/cresource/q3/p13/' target="_blank">IRIS Center</a></li>
+                <li><a href='https://greatmiddleschools.org/toolkits/reading/generating-leveled-questions/' target="_blank">Middle School Matters</a></li>
+                <li><a href='https://www.meadowscenter.org/library/resource/tala-videos-generating-questions-comprehension' target="_blank">Meadows Center</a></li>
             </ul>
  
 <h3>References</h3>
