--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -5,6 +5,7 @@ import Showcase from '../components/Showcase.astro';
 import sgqWalkthroughimg from '../images/Self-Generated-Questions-digiCOACH-Edition.png';
 
 import pdf from '../images/pdf.png';
+import { Icon } from 'astro-icon';
 
 ---
 <Layout >
@@ -18,7 +19,10 @@ import pdf from '../images/pdf.png';
             </p>
             <p><strong>Why:</strong> The SGQs strategy has been shown to be effective with middle school students in general education content classes, reading intervention classes for students who have reading disabilities, and classes for English learners (Vaughn et al., 2006). It can be used across content domains such as English Language Arts, Science, and Social Studies. The SGQs strategy promotes self-monitoring during reading, increases reading comprehension, text connections, and retention of important concepts and details (Vaughn et al., 2011).</p>
             <div class='module-launch'>
-                <a href='/modules#SGQ' class='btn'>Self-Generated Questions Modules</a>
+                <a href='/modules#SGQ' class='btn'>
+                    <h3>Go To Self-Generated Questions Modules </h3>&nbsp; 
+                    <Icon name="jam:arrow-circle-right" width='40'/>
+                </a>
             </div>
             <div class='section-title'>
                 <h2>Preview the SGQs Demonstration Videos</h2>
@@ -116,9 +120,9 @@ import pdf from '../images/pdf.png';
  
 <h3>References</h3>
 Vaughn, S., & Edmonds, M. (2006). Reading Comprehension for Older Readers. Intervention in School and Clinic, 41(3), 131–137.
-https://doi.org/10.1177/10534512060410030101
+<a href='https://doi.org/10.1177/10534512060410030101'>https://doi.org/10.1177/10534512060410030101</a>
 Vaughn, S., Wexler, J., Roberts, G., Barth, A. A., Cirino, P. T., Romain, M. A., … Denton, C. A. (2011). Effects of Individualized and Standardized Interventions on Middle School Students with Reading Disabilities. Exceptional Children, 77(4), 391–407.
-https://doi.org/10.1177/001440291107700401
+<a href='https://doi.org/10.1177/001440291107700401'>https://doi.org/10.1177/001440291107700401</a>
  
 <h3>Relevant Common Core State Standards: Anchor Standards for Reading</h3>
 CCSS.ELA-Literacy.CCRA.R.1 Read closely to determine what the text says explicitly and to make logical inferences from it; cite specific textual evidence when writing or speaking to support conclusions drawn from the text.
