--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -22,7 +22,7 @@ import { Icon } from 'astro-icon';
                
 
                 <div class='module-launch'>
-                    <a href='/modules#ARGuides' class='btn'><h3>Go To Anticipation Reaction Guides Literacy Module</h3> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
+                    <a href='/modules#ARGuides' class='btn'><h3>Go To Anticipation Reaction Guides Literacy Modulez</h3> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                 </div>
             
             <div class='section-title'>
