--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ import bookImage from '../images/CR_logo_sm_V_rgb.png';
     <Showcase showExtra={false} />
     <section class="page-content">
         <h2>404!</h2>
-        <h2><img src={bookImage} ></h2>
+        <h2><a href='/index.html'><img src={bookImage} ></a></h2>
         <h2>Page Not Found</h2>
 </div>
 </section>
