--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,6 +16,11 @@
     padding: 0;
   }
   
+
+  html {
+    scroll-behavior: smooth;
+  } 
+
   body {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
